Finish route And Start View

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 
         "psr-4": {
             "SecTheater\\": "src" ,
-            "SecTheater\\App\\": "App"
+            "App\\": "App"
         }
     },
     "require": {
